es/v0/api-reference/introduction.mdx
---
title: "Introducción"
description: "Referencia de la API de Firecrawl"
---

<div id="base-url">
  ## URL base
</div>

Todas las solicitudes usan la siguiente URL base:

```bash
https://api.firecrawl.dev 
```


<div id="authentication">
  ## Autenticación
</div>

Para autenticarse, es necesario incluir un encabezado Authorization. El encabezado debe contener `Bearer fc_123456789`, donde `fc_123456789` es tu clave de API.

```bash
Authorization: Bearer fc_123456789
```

​


<div id="response-codes">
  ## Códigos de respuesta
</div>

Firecrawl utiliza códigos de estado HTTP convencionales para indicar el resultado de tus solicitudes.

Por lo general, los códigos 2xx indican éxito, los 4xx representan errores del cliente y los 5xx señalan problemas de infraestructura.

Status | Description
--- | ---
200 | Solicitud realizada con éxito.
400 | Verifica que los parámetros sean correctos.
401 | No se proporcionó la clave de API.
402 | Pago requerido.
404 | No se encontró el recurso solicitado.
429 | Se superó el límite de tasa.
5xx | Indica un error del servidor de Firecrawl.

Consulta la sección de Códigos de error para una explicación detallada de todos los posibles errores de la API.

<div id="rate-limit">
  ## Límites de tasa
</div>

La API de Firecrawl tiene límites de tasa para garantizar la estabilidad y la fiabilidad del servicio. Estos límites se aplican a todos los endpoints y se basan en la cantidad de solicitudes realizadas dentro de un período de tiempo determinado.

Si superas los límites de tasa, recibirás un código de respuesta 429.