es/v1/api-reference/introduction.mdx
---
title: "Introducción"
description: "Referencia de la API de Firecrawl"
---

<div id="features">
  ## Funcionalidades
</div>

<CardGroup cols={3}>
  <Card title="Scrape" icon="markdown" href="/es/api-reference/endpoint/scrape" color="FF713C">
    Extrae contenido de cualquier página web en formato Markdown o JSON.
  </Card>

  <Card title="Crawl" icon="spider" href="/es/api-reference/endpoint/crawl-post" color="FF713C">
    Rastrea sitios web completos y extrae su contenido y metadatos.
  </Card>

  <Card title="Map" icon="map" href="/es/api-reference/endpoint/map" color="FF713C">
    Obtén rápidamente una lista completa de URLs de cualquier sitio web.
  </Card>

  <Card title="Search" icon="magnifying-glass" href="/es/api-reference/endpoint/search" color="FF713C">
    Busca en la web y obtén el contenido completo de las páginas en cualquier formato.
  </Card>
</CardGroup>

<div id="agentic-features">
  ## Funciones agénticas
</div>

<CardGroup cols={3}>
  <Card title="Extract" icon="barcode-read" href="/es/api-reference/endpoint/extract" color="FF713C">
    Extrae datos estructurados de páginas web completas usando lenguaje natural.
  </Card>

  {/* <Card title="Deep Research" icon="brain-circuit" href="/api-reference/endpoint/deep-research" color="FF713C">
      Investigación web con IA que explora y sintetiza información de forma autónoma.
    </Card> */}
</CardGroup>

<div id="base-url">
  ## URL base
</div>

Todas las solicitudes usan la siguiente URL base:

```bash
https://api.firecrawl.dev 
```

<div id="authentication">
  ## Autenticación
</div>

Para autenticarse, debes incluir un encabezado Authorization. El encabezado debe contener `Bearer fc-123456789`, donde `fc-123456789` es tu clave de API.

```bash
Authorization: Bearer fc-123456789
```

​

<div id="response-codes">
  ## Códigos de respuesta
</div>

Firecrawl utiliza códigos de estado HTTP convencionales para indicar el resultado de tus solicitudes.

Por lo general, los códigos 2xx indican éxito, los 4xx representan errores del cliente y los 5xx señalan problemas de infraestructura.

Estado | Descripción
--- | ---
200 | La solicitud se realizó correctamente.
400 | Verifica que los parámetros sean correctos.
401 | No se proporcionó la clave de API.
402 | Pago requerido.
404 | No se pudo encontrar el recurso solicitado.
429 | Se superó el límite de tasa.
5xx | Indica un error del servidor de Firecrawl.

Consulta la sección Códigos de error para una explicación detallada de todos los posibles errores de la API.

​

<div id="rate-limit">
  ## Límites de tasa
</div>

La API de Firecrawl tiene límites de tasa para garantizar la estabilidad y la fiabilidad del servicio. Estos límites se aplican a todos los endpoints y se basan en la cantidad de solicitudes realizadas dentro de un período de tiempo específico.

Cuando superes el límite, recibirás un código de respuesta 429.